--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-	    <title>Winebuddy</title>
+      <title>Winebuddy</title>
 <!--Stylesheets-->
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Roboto:400,500" rel="stylesheet">
     <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">	
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     <div class="section no-pad-bot">
       <div class="container">
       <br><br>
-        <h2 class="header center white-text" id="shadowtext">A New Way to Connect, Share, and Learn about Wine</h2>
+        <h1 class="header center white-text" id="shadowtext">A New Way to Connect, Share, and Learn about Wine</h1>
         <div class="row center">
           <a href="index2.html" id="download-button" class="btn-large waves-effect waves-light red darken-4">Get Started</a>
         </div>
@@ -50,19 +50,19 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><img src= "search.png"></i></h2>
+            <h2 class="center brown-text"><img src= "assets/images/search.png"></i></h2>
               <h5 class="center">Search for Wines</h5>
           </div>
         </div>
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><img src="profile.png"></i></h2>
+            <h2 class="center brown-text"><img src="assets/images/profile.png"></i></h2>
               <h5 class="center">Create a Profile</h5>
           </div>
         </div>
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center"><i id="bookicon"><img src="book.png" ></i></h2>
+            <h2 class="center"><i id="bookicon"><img src="assets/images/book.png" ></i></h2>
               <h5 class="center">Learn</h5>
           </div>
         </div>
@@ -131,7 +131,13 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Our Company</h5>
-            <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. We also just love wine.</p>
+            <p class="grey-text text-lighten-4">We are a team of students working on this project like it's our full time job. We also just love wine.</p>
+            <h5 class="white-text">Contact Us</h5>
+              <address>
+              <a href= "mailto:winebuddysocial@gmail.com">winebuddysocial@gmail.com</a>
+              </address>
+        </div>
+        <div class="col l3 s12">
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
@@ -152,5 +158,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="assets/javascript/materialize.js"></script>
   <script src="assets/javascript/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 </html>
