--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
       <title>Winebuddy Profile</title>
 <!--Stylesheets-->
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Roboto:400,500" rel="stylesheet">
       <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"> 
 </head>
@@ -37,7 +37,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-          <h2 class="header center white-text" id="shadowtext">Your Profile</h2>
+          <h1 class="header center white-text" id="shadowtext">Create Your Profile</h1>
         <br><br>
       </div>
     </div>
@@ -72,17 +72,16 @@
                 <label for="bio">Short Bio</label>
             </div>
           </div>
-          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-            <i class="material-icons right">send</i>
+          <button class="btn waves-effect waves-light red darken-4" type="submit" name="action">Submit
+            
           </button>
         </form>
         <br><br>
 <!--Log in with Facebook Option-->        
         <div class="row">
           <div class="input-field col s12">       
-            <fb:login-button  class= "fbclass" size="xlarge" scope="public_profile,email" onlogin="checkLoginState();" autologoutlink="true">
+            <fb:login-button  class= "fbclass" size="xlarge" onclick="checkLoginState()" scope="public_profile,email" onlogin="checkLoginState();" autologoutlink="true">
             </fb:login-button>
-            <button class ="btn btn-default" onclick="checkLoginState();">Log in with Facebook</button>
             <br>
             <div id="status"></div>
           </div>  
@@ -96,19 +95,20 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">Our Company</h5>
-            <p class="grey-text text-lighten-4">We are a team of students working on this project like it's our full time job. We also just love wine.
-            </p>
+            <p class="grey-text text-lighten-4">We are a team of students working on this project like it's our full time job. We also just love wine.</p>
+            <h5 class="white-text">Contact Us</h5>
+              <address>
+              <a href= "mailto:winebuddysocial@gmail.com">winebuddysocial@gmail.com</a>
+              </address>
+        </div>
+        <div class="col l3 s12">
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
-            <i class="icon"> <a href="https://www.facebook.com">
-                <img src="assets/images/facebook.png"></a></i>
-            <i class="icon"> <a href="https://www.instagram.com">
-                <img src="assets/images/instagram.png"></a></i>
-            <i class="icon"><a href="https://www.twitter.com">
-                <img src="assets/images/twitter.png"></a></i>
-            <i class="icon"> <a href="https://plus.google.com"> 
-                <img src="assets/images/googleplus.png"></a></i>
+            <i class="icon"> <a href="https://www.facebook.com"><img src="assets/images/facebook.png"></a></i>
+            <i class="icon"> <a href="https://www.instagram.com"><img src="assets/images/instagram.png"></a></i>
+            <i class="icon"><a href="https://www.twitter.com"><img src="assets/images/twitter.png"></a></i>
+            <i class="icon"> <a href="https://plus.google.com"><img src="assets/images/googleplus.png"></a></i>
         </div>
       </div>
     </div>
@@ -123,5 +123,6 @@
   <script src="assets/javascript/materialize.js"></script>
     <script src="assets/javascript/init.js"></script>
   <script src="assets/javascript/fb.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 </html>
