--- a/index3.html
+++ b/index3.html
@@ -105,7 +105,7 @@
                 <li>
                     <input type="checkbox" id="rose-wine" value="126" /><label for="rose-wine">Rose&acute;</label></li>
                 <li>
-                    <input type="checkbox" id="sparkling-wine" value="123" /><label for="parkling-wine">Sparkling</label></li>
+                    <input type="checkbox" id="sparkling-wine" value="123" /><label for="sparkling-wine">Sparkling</label></li>
                 <li>
                     <input type="checkbox" id="dessert-wine" value="128" /><label for="dessert-wine">Dessert</label></li>
         </form>
