--- a/index3.html
+++ b/index3.html
@@ -47,8 +47,8 @@
     <div class="section">
       <div class="row">
         <div class="col s12 left">
-          <form class="col s12" id="userInfo" type="submit">
-            <dl class="dropdown"> 
+          <div class="dropdown-container">
+          <dl class="dropdown"> 
   <dt>
     <a>
       Red      
@@ -70,7 +70,9 @@
             </ul>
     </dd>
 </dl>
+</div>
 <br><br><br>
+<div class="dropdown-container">
 <dl class="dropdown"> 
   <dt>
     <a>
@@ -91,7 +93,9 @@
             </ul>
     </dd>
 </dl>
+</div>
 <br><br>
+<div class="dropdown-container">
 <dl class="dropdown"> 
   <dt>
     <a>
@@ -112,9 +116,10 @@
             </ul>
     </dd>
 </dl>
+</div>
 <br>
 <input id="submitWineButton" type="submit" name="submit" value="Submit">
-</form>
+
 <br><br>
 <div class="row">
   <div class= "col s12 center">
@@ -212,7 +217,7 @@ Level of Wine Knowledge:
     </div>
     <div class="footer-copyright">
       <div class="container">
-        <p>&copy2017 Made by Keli Poole, Monica Jones, and Megha Iyer<a class="brown-text text-lighten-3"></a></p>
+        <p>&copy;2017 Made by Keli Poole, Monica Jones, and Megha Iyer<a class="brown-text text-lighten-3"></a></p>
       </div>
     </div>
   </footer>
